--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "tests": [
+          "./vendor/bin/phpunit tests"
         ]
     },
     "config": {
