--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
   }
 
   stages {
-    stage('install') {
+    stage('evironment') {
       steps {
         git branch: 'main', url: 'https://github.com/dvLef/deploy-test'
         sh 'apt-get update'
@@ -18,21 +18,22 @@ pipeline {
         sh 'curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer'
         sh 'composer --verion'
       }
+    }
 
-      stage('install') {
-        steps {
-          sh 'cp .env.example .env'
-          sh 'composer update'
-          sh 'composer install'
-          sh 'php artisan key:generate'
-        }
+    stage('install') {
+      steps {
+        sh 'cp .env.example .env'
+        sh 'composer update'
+        sh 'composer install'
+        sh 'php artisan key:generate'
       }
+    }
 
-      stage('test') {
-        steps {
-          sh 'composer tests'
-        }
+    stage('tests') {
+      steps {
+        sh 'composer tests'
       }
     }
   }
 }
+
