--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
         sh 'apt-get install php php-curl php-xml zip unzip php-zip -y'
         sh 'php -v'
         sh 'curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer'
+        sh 'composer --version'
       }
     }
 
@@ -23,7 +24,9 @@ pipeline {
       steps {
         sh 'cp .env.example .env'
         sh 'composer update'
-        sh 'composer install'
+        sh 'composer install --no-interaction'
+        sh 'php artisan clear-compiled'
+        sh 'php artisan optimize'
         sh 'php artisan key:generate'
       }
     }
@@ -33,6 +36,14 @@ pipeline {
         sh 'composer tests'
       }
     }
+
+    stage('build') {
+      steps {
+        sh 'docker build -t $image_name:$image_tag .'
+      }
+    }
+
   }
 }
+
 
