se agrega docker en stage evironment

--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -17,6 +17,7 @@ pipeline {
         sh 'php -v'
         sh 'curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer'
         sh 'composer --version'
+        sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
       }
     }
 
