--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
         sh 'mkdir -p /etc/apt/keyrings'
         sh 'curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg'
         sh 'echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null'
+        sh 'apt-get update'
         sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
         sh 'service docker start'
       }
