--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -1,8 +1,6 @@
 pipeline {
-  agent any
-
-  tools {
-    docker "docker"
+  agent {
+    docker { image 'node:16.13.1-alpine' }
   }
 
   parameters {
