--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -18,12 +18,11 @@ pipeline {
         sh 'curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer'
         sh 'composer --version'
 
-        // instalacion de docker
-        sh 'apt-get install apt-transport-https ca-certificates gnupg-agent software-properties-common -y'
-        sh 'curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -'
-        sh 'add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"'
-        sh 'apt-get update'
-        sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
+        // instalacion de docker para amazon linux 2
+        sh 'amazon-linux-extras install docker -y'
+        sh 'service docker start'
+        sh 'usermod -a -G docker ec2-user'
+        sh 'chkconfig docker on'
         sh 'docker --version'
       }
     }
