--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -44,6 +44,12 @@ pipeline {
       }
     }
 
+    stage('build') {
+      steps {
+        sh 'docker build -t ${image_name}:${image_tag} .'
+      }
+    }
+
   }
 }
 
