--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -26,6 +26,11 @@ pipeline {
         sh 'apt-get update'
         sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
         sh 'docker --version'
+
+        // run docker deamon
+        sh 'service docker status'
+        sh 'service docker start'
+
       }
     }
 
