--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -26,6 +26,7 @@ pipeline {
         sh 'apt-get update'
         sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
         sh 'docker --version'
+        sh 'chown -R jenkins:jenkins /var/run/docker.sock'
 
         // run docker deamon
         sh 'service docker start'
