--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -29,8 +29,7 @@ pipeline {
         sh 'chown -R jenkins:jenkins /var/run/docker.sock'
 
         // run docker deamon
-        sh 'service docker start'
-        sh 'service docker status'
+        sh 'systemctl start docker'
 
       }
     }
