--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -27,9 +27,11 @@ pipeline {
         sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
         sh 'docker --version'
 
-        // run docker deamon
-        sh 'systemctl start docker'
+        // start docker service
+        sh 'service docker start'
 
+        // verify docker daemon is running
+        sh 'docker ps'
       }
     }
 
