se agrega usuario a grupo docker en pipeline

--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -28,6 +28,8 @@ pipeline {
         sh 'docker --version'
 
         // start docker service
+        sh 'groupadd docker'
+        sh 'usermod -aG docker $(whoami)'
         sh 'service docker start'
 
         // verify docker daemon is running
