se crean pruebas para docker en pipeline x3

--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
         sh 'usermod -aG docker $(whoami)'
         sh 'service docker start'
         sh 'ls -la /var/run/docker.sock'
+        sh 'service docker status'
 
         // verify docker daemon is running
         sh 'docker ps'
