--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -32,6 +32,7 @@ pipeline {
         sh 'service docker start'
         sh 'ls -la /var/run/docker.sock'
         sh 'service docker status'
+        sh 'dockerd'
 
         // verify docker daemon is running
         sh 'docker ps'
