--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
-  agent any
+  agent {
+    kubernetes {
+      cloud 'kubernetes'
+    }
+  }
 
   parameters {
     string(name: 'container_name', defaultValue: 'deploy-test-container', description: 'Container name')
