--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -13,37 +13,38 @@ pipeline {
   }
 
   stages {
-    stage('evironment') {
-      steps {
-        container('jnlp'){
-          git branch: 'main', url: 'https://github.com/dvLef/deploy-test'
-          sh 'whoami'
-          sh 'apt-get update'
-          sh 'apt-get install php curl php-curl php-xml zip unzip php-zip -y'
-          sh 'php -v'
-          sh 'curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer'
-          sh 'composer --version'
 
-          // install docker in jnlp container
-          sh 'apt-get update'
-          sh 'apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common -y'
-          sh 'curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -'
-          sh 'add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"'
-          sh 'apt-get update'
-          sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
-          sh 'docker --version'
+    // stage('evironment') {
+    //   steps {
+    //     container('jnlp'){
+    //       git branch: 'main', url: 'https://github.com/dvLef/deploy-test'
+    //       sh 'whoami'
+    //       sh 'apt-get update'
+    //       sh 'apt-get install php curl php-curl php-xml zip unzip php-zip -y'
+    //       sh 'php -v'
+    //       sh 'curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer'
+    //       sh 'composer --version'
 
-          // start docker service
-          sh 'usermod -aG docker $(whoami)'
-          sh 'newgrp docker'
-          sh 'service docker start'
-        }
-      }
-    }
+    //       // install docker in jnlp container
+    //       sh 'apt-get update'
+    //       sh 'apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common -y'
+    //       sh 'curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -'
+    //       sh 'add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"'
+    //       sh 'apt-get update'
+    //       sh 'apt-get install docker-ce docker-ce-cli containerd.io -y'
+    //       sh 'docker --version'
+
+    //       // start docker service
+    //       sh 'usermod -aG docker $(whoami)'
+    //       sh 'newgrp docker'
+    //       sh 'service docker start'
+    //     }
+    //   }
+    // }
 
     stage('install') {
       steps {
-        container('jnlp'){
+        container('composer-container'){
           sh 'cp .env.example .env'
           sh 'composer update'
           sh 'composer install --no-interaction'
@@ -54,7 +55,7 @@ pipeline {
 
     stage('tests') {
       steps {
-        container('jnlp'){
+        container('composer-container'){
           sh 'composer tests'
         }
       }
