--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
         spec:
           containers:
           - name: composer-container
-            image: composer:latest
+            image: finizens/php:7.1.3-composer
             command:
             - cat
             tty: true
