se prueba comando para ejecutar docker en pipeline

--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
           - name: docker-container
             image: docker:latest
             command:
-            - cat
+            - -v /var/run/docker.sock:/var/run/docker.sock
             tty: true
         '''
     }
