se edita el label del pod en pipeline

--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         kind: Pod
         metadata:
           labels:
-            some-label: slave-pod
+            some-label: slave-kubepod
         spec:
           containers:
           - name: composer-container
