se cambia container de docker por alpine en pipeline

--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
             - cat
             tty: true
           - name: docker-container
-            image: docker:latest
+            image: alpine:latest
             command:
             - cat
             tty: true
@@ -88,11 +88,10 @@ pipeline {
     stage('build') {
       steps {
         container('docker-container'){
-          // create docker directory for daemon in /etc
-          sh 'mkdir -p /etc/docker'
-          // create daemon.json
-          sh 'echo \'{ "dns": ["10.100.0.10"] }\' > /etc/docker/daemon.json'
-          sh 'service docker restart'
+          // install docker in alpine linux
+          sh 'apk add --update docker openrc'
+          sh 'service docker start'
+          sh 'docker --version'
         }
       }
     }
