--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -15,30 +15,40 @@ pipeline {
               command:
               - cat
               tty: true
-            - name: docker-cmds
-              image: docker:1.12.6
-              command: ['docker', 'run', '-p', '80:80', 'httpd:latest']
-              resources:
-                requests:
-                  cpu: 10m
-                  memory: 256Mi
-              env:
-                - name: DOCKER_HOST
-                  value: tcp://${HOSTNAME}:2375
-            - name: dind-daemon
-              image: docker:1.12.6-dind
-              resources:
-                requests:
-                  cpu: 20m
-                  memory: 512Mi
-              securityContext:
-                privileged: true
-              volumeMounts:
-                - name: docker-graph-storage
-                  mountPath: /var/lib/docker
+          - name: docker
+            image: docker:latest
+            command:
+              - /bin/cat
+            tty: true
+            volumeMounts:
+              - name: dind-certs
+                mountPath: /certs
+            env:
+              - name: DOCKER_TLS_CERTDIR
+                value: /certs
+              - name: DOCKER_CERT_PATH
+                value: /certs
+              - name: DOCKER_TLS_VERIFY
+                value: 1
+              - name: DOCKER_HOST
+                value: tcp://localhost:2376
+          - name: dind
+            image: docker:dind
+            securityContext:
+              privileged: true
+            env:
+              - name: DOCKER_TLS_CERTDIR
+                value: /certs
+            volumeMounts:
+              - name: dind-storage
+                mountPath: /var/lib/docker
+              - name: dind-certs
+                mountPath: /certs/client
           volumes:
-            - name: docker-graph-storage
-              emptyDir: {}
+          - name: dind-storage
+            emptyDir: {}
+          - name: dind-certs
+            emptyDir: {}
         '''
     }
   }
