--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -15,35 +15,35 @@ pipeline {
               command:
               - cat
               tty: true
-          - name: docker
-            image: docker:latest
-            command:
-              - /bin/cat
-            tty: true
-            volumeMounts:
-              - name: dind-certs
-                mountPath: /certs
-            env:
-              - name: DOCKER_TLS_CERTDIR
-                value: /certs
-              - name: DOCKER_CERT_PATH
-                value: /certs
-              - name: DOCKER_TLS_VERIFY
-                value: 1
-              - name: DOCKER_HOST
-                value: tcp://localhost:2376
-          - name: dind
-            image: docker:dind
-            securityContext:
-              privileged: true
-            env:
-              - name: DOCKER_TLS_CERTDIR
-                value: /certs
-            volumeMounts:
-              - name: dind-storage
-                mountPath: /var/lib/docker
-              - name: dind-certs
-                mountPath: /certs/client
+            - name: docker
+              image: docker:latest
+              command:
+                - /bin/cat
+              tty: true
+              volumeMounts:
+                - name: dind-certs
+                  mountPath: /certs
+              env:
+                - name: DOCKER_TLS_CERTDIR
+                  value: /certs
+                - name: DOCKER_CERT_PATH
+                  value: /certs
+                - name: DOCKER_TLS_VERIFY
+                  value: 1
+                - name: DOCKER_HOST
+                  value: tcp://localhost:2376
+            - name: dind
+              image: docker:dind
+              securityContext:
+                privileged: true
+              env:
+                - name: DOCKER_TLS_CERTDIR
+                  value: /certs
+              volumeMounts:
+                - name: dind-storage
+                  mountPath: /var/lib/docker
+                - name: dind-certs
+                  mountPath: /certs/client
           volumes:
           - name: dind-storage
             emptyDir: {}
@@ -110,7 +110,7 @@ pipeline {
 
     stage('build') {
       steps {
-        container('docker-cmds'){
+        container('docker'){
           // build image
           sh 'docker build -t ${image_name}:${image_tag} .'
         }
