--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -36,6 +36,8 @@ pipeline {
         container('docker'){
           // build image
           sh 'docker build -t ${image_name}:${image_tag} .'
+          // push image to ecr
+          sh 'docker push 705505288478.dkr.ecr.sa-east-1.amazonaws.com/ci-deploy-test-registry/${image_name}:${image_tag}'
         }
       }
     }
