--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -37,6 +37,7 @@ pipeline {
           // build image
           sh 'docker build -t ${image_name}:${image_tag} .'
           // push image to ecr
+          sh 'docker tag ${image_name}:${image_tag} 705505288478.dkr.ecr.sa-east-1.amazonaws.com/ci-deploy-test-registry/${image_name}:${image_tag}'
           sh 'docker push 705505288478.dkr.ecr.sa-east-1.amazonaws.com/ci-deploy-test-registry/${image_name}:${image_tag}'
         }
       }
