--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
           sh 'apt-get update && apt-get install -y unzip gblibc groff less'
           sh 'curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"'
           sh 'unzip awscliv2.zip'
-          sh 'sudo ./aws/install'
+          sh './aws/install'
           sh 'aws --version'
 
           // // login to aws ecr
