Se agrega stage deploy a pipeline con instalacion de kubectl

--- a/ci-cd/jenkinsfile
+++ b/ci-cd/jenkinsfile
@@ -57,6 +57,21 @@ pipeline {
         }
       }
     }
+
+    stage('deploy') {
+      steps {
+        container('docker'){
+          // install kubectl 1.23.7
+          sh 'apk add --no-cache curl'
+          sh 'curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.7/bin/linux/amd64/kubectl'
+          sh 'chmod +x ./kubectl'
+          sh 'mv ./kubectl /usr/local/bin/kubectl'
+          sh 'kubectl version --client'
+
+
+        }
+      }
+    }
   }
 }
 
